Add travis config for build

--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   },
   "homepage": "https://github.com/bbraithwaite/karma-seed",
   "devDependencies": {
-    "chai": "^2.1.0",
+    "chai": "2.1.0",
     "istanbul": "^0.3.6",
     "jshint": "^2.6.0",
     "karma": "^0.12.31",
-    "karma-chai": "^0.1.0",
+    "karma-chai": "0.1.0",
     "karma-chrome-launcher": "^0.1.7",
     "karma-cli": "0.0.4",
     "karma-coverage": "^0.2.7",
