Add travis config for build

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/bbraithwaite/karma-seed",
   "devDependencies": {
     "chai": "2.1.0",
-    "istanbul": "^0.3.6",
+    "istanbul": "0.3.6",
     "jshint": "2.6.0",
     "karma": "0.12.31",
     "karma-chai": "0.1.0",
