--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "karma-html2js-preprocessor": "0.1.0",
     "karma-mocha": "0.1.10",
     "karma-phantomjs-launcher": "0.1.4",
-    "mocha": "2.1.0"
+    "mocha": "2.1.0",
+    "get-stdin": "4.0.1"
   }
 }
