--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A seed project for using the Karma test framework",
   "main": "index.js",
   "scripts": {
-    "test": "karma start karma.conf.js",
+    "test": "./node_modules/.bin/karma start --single-run --browsers PhantomJS",
     "full-test": "NODE_ENV=test karma start karma.conf.js"
   },
   "repository": {
