--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/bbraithwaite/karma-seed",
   "devDependencies": {
     "chai": "2.1.0",
+    "get-stdin": "4.0.1",
     "istanbul": "0.3.6",
     "jshint": "2.6.0",
     "karma": "0.12.31",
@@ -31,11 +32,11 @@
     "karma-chrome-launcher": "0.1.7",
     "karma-cli": "0.0.4",
     "karma-coverage": "0.2.7",
+    "karma-firefox-launcher": "^1.0.1",
     "karma-fixture": "0.2.1-1",
     "karma-html2js-preprocessor": "0.1.0",
     "karma-mocha": "0.1.10",
     "karma-phantomjs-launcher": "0.1.4",
-    "mocha": "2.1.0",
-    "get-stdin": "4.0.1"
+    "mocha": "2.1.0"
   }
 }
