--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 before_script:
   - npm update -g npm
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"  
 language: node_js
 node_js:
   - "6"
