--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "karma-mocha": "0.1.10",
     "karma-phantomjs-launcher": "0.1.4",
     "mocha": "2.1.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
